<resources>
    <!-- Common -->
    <string name="app_name" translatable="false">TETO - EDC</string>
    <string name="facebook_app_id" translatable="false">335573473547858</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb335573473547858</string>
    <string name="service_error_message">Service Error. Details: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_implemented">Sorry. Method not implemented yet.</string>
    <string name="blank_field">You need to fill the %s before clicking here.</string>
    <string name="logout_confirm">Do you really want to logout?</string>
    <string name="quit_confirm">Do you really want to quit?</string>
    <string name="validation_phone">Invalid phone. Ex.: (##) #####-####</string>
    <string name="validation_email">Invalid e-mail.</string>
    <string name="validation_required_field">Mandatory field.</string>
    <string name="validation_minlength">This field requires at least %s characters.</string>
    <string name="author" translatable="false">Rafael dos Santos Calderani</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="nav_quit">Quit</string>
    <string name="tetoBrasilSite" translatable="false">http://www.techo.org/paises/brasil</string>
    <string name="user_image">User Image</string>
    <string name="management">Management</string>
    <string name="about">About Us</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Login Activity -->
    <string name="email" translatable="false">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_reset">Forgot your password? Fill your login and click here to reset.</string>
    <string name="user_auth_success">User authenticated.</string>
    <string name="user_invalid">Invalid user, please sign up if you want to use the app.</string>
    <string name="user_auth_failed">Authentication failed.</string>

    <!-- User Management Activity -->
    <string name="name">Full Name</string>
    <string name="communityName">Community</string>
    <string name="function">Function</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="user_deletion">User deleted sucessfully, you will be redirected to the login screen.</string>
    <string name="user_deletion_error">Error while deleting user.</string>
    <string name="delete">Delete</string>
    <string name="user_deletion_confirm">Do you really want to erase your user?</string>
    <string name="user_creation_continue">Almost done, just fill in your Community, Function and Phone Number and we are all set!</string>
    <string name="user_creation_error">There was an error when trying to add/update this User.</string>
    <string name="user_creation_success">Amazing! Welcome to our awesome group!</string>
    <string name="loading_communities">Loading communities...</string>

    <!-- Navigation Activity -->
    <string name="welcome_text" formatted="false">Welcome %s, you belong to %s\'s team and your next meeting will be on %s.</string>
    <string name="remember_me">Remember me</string>
    <string name="my_team">My Team</string>
    <string name="communities">Communities</string>
    <string name="schedule">Schedule</string>
    <string name="projects">Projects</string>
    <string name="news">News</string>

    <!-- Communities Activity -->
    <string name="gpsPermissionRequest">This will require permissions to use your phone\'s GPS to function correctly ok?</string>
    <string name="existing_user">User already registered, if you forgot your password click on the link \'Forgot your password?\' to reset it.</string>

    <!-- Contact Activity -->
    <string name="subject">Subject</string>
    <string name="send">Send</string>

    <!-- Schedule Activity -->
    <string name="googlePlayServices_required">This app requires Google Play Services.\nPlease install Google Play Services on your device and relaunch this app.</string>
    <string name="contacts_permission_request">This app needs to access your community account (via Contacts).</string>
    <string name="no_network">No network connection available.</string>

    <!-- About Activity -->
    <string name="author_text">Author:</string>
    <string name="app_version_text">App Version:</string>
    <string name="emptyProjectsList">You don\'t have any projects recorded, click on the + button below to add one.</string>

    <!-- Status Array -->
    <string name="status_NotStarted">Not Started</string>
    <string name="status_Ongoing">Ongoing</string>
    <string name="status_Paused">Paused</string>
    <string name="status_Completed">Completed</string>
    <string name="status_Cancelled">Cancelled</string>
    <string name="completed_on">Completed On</string>
    <string name="modified_on">Modified On</string>
    <string name="created_on">Created On</string>

    <!-- Project Management Activity -->
    <string name="status" translatable="false">Status</string>
    <string name="managersCommunity">Managers From Community</string>
    <string name="managersTeam">Managers From Team</string>
    <string name="description">Description</string>
    <string name="projectName">Project Name</string>
    <string name="project_creation_success">Project inserted / updated successfully.</string>
    <string name="project_creation_error">There was an error when saving this project.</string>
    <string name="project_deletion">Project deleted successfully.</string>
    <string name="project_deletion_error">There was an error when deleting this project.</string>
    <string name="project_deletion_confirm">Do you really want to delete your project?</string>
    <string name="call_me">Call Me</string>
    <string name="message_me">Message Me</string>
    <string name="smsPermissionRequest">The app needs permission to send SMS messages to do this.</string>
    <string name="phoneCallPermissionRequest">The app needs permission to make a phone call to do this.</string>
    <string name="resource_unavailable">Unfortunately, it seems your cellphone doesn\'t have this function.</string>
    <string name="share_with">Share with:</string>
    <string name="share_message">This app is awesome! Try it out. ;)</string>
    <string name="storagePermissionRequest">The app needs permission to manage files to do this.</string>
</resources>
