<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/management">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit_profile" />
            <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/ic_calendar"
                android:title="@string/schedule" android:visible="false" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
