<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/LinearLayoutDefault">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutDefault"
    tools:context="br.com.calderani.rafael.tetoedc.ProjectManagementActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etProjectName"
            style="@style/controls_default"
            android:hint="@string/projectName"
            android:inputType="text"
            android:maxLength="100" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etDescription"
            style="@style/controls_default"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="255"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etManagersFromTeam"
            style="@style/controls_default"
            android:hint="@string/managersTeam"
            android:maxLength="255"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etManagersFromCommunity"
            style="@style/controls_default"
            android:hint="@string/managersCommunity"
            android:maxLength="255"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <TextView
            style="@style/controls_default"
            android:layout_weight="0.7"
            android:text="@string/status"/>

        <Spinner
            android:id="@+id/ddlStatus"
            style="@style/controls_default"
            android:layout_weight="0.3"
            android:entries="@array/status_array"
            android:prompt="@string/status"/>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <TextView
            style="@style/controls_default"
            android:layout_weight="0.7"
            android:text="@string/created_on"/>
        <TextView
            android:id="@+id/tvCreatedOn"
            style="@style/controls_default"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <TextView
            style="@style/controls_default"
            android:layout_weight="0.7"
            android:text="@string/modified_on"/>
        <TextView
            android:id="@+id/tvModifiedOn"
            style="@style/controls_default"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <TextView
            style="@style/controls_default"
            android:layout_weight="0.7"
            android:text="@string/completed_on"/>
        <TextView
            android:id="@+id/tvCompletedOn"
            style="@style/controls_default"
            android:layout_weight="0.3" />
    </LinearLayout>

    <Button
        android:id="@+id/btDeleteProject"
        android:background="@drawable/button_red"
        style="@style/button_login"
        android:visibility="invisible"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/btSaveProject"
        android:background="@drawable/button_default"
        style="@style/button_login"
        android:text="@string/save"/>
</LinearLayout>
</ScrollView>