<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/LinearLayoutDefault">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutDefault"
    tools:context="br.com.calderani.rafael.tetoedc.UserManagementActivity"
    android:layout_margin="@dimen/default_margin"
    android:id="@+id/llScreen">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etEmail"
            style="@style/controls_default"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="100" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPassword"
            style="@style/controls_default"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="20"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etName"
            style="@style/controls_default"
            android:hint="@string/name"
            android:maxLength="255"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <TextView
            style="@style/controls_default"
            android:layout_weight="0.7"
            android:hint="@string/communityName"
            android:text="@string/communityName"/>

        <Spinner
            android:id="@+id/ddlCommunity"
            style="@style/controls_default"
            android:layout_weight="0.3"
            android:prompt="@string/communityName"/>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <TextView
            style="@style/controls_default"
            android:layout_weight="0.7"
            android:hint="@string/function"
            android:text="@string/function"/>

        <Spinner
            android:id="@+id/ddlFunction"
            style="@style/controls_default"
            android:layout_weight="0.3"
            android:entries="@array/function_array"
            android:prompt="@string/function"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPhone"
            style="@style/controls_default"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:maxLength="20" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btDeleteUser"
        android:background="@drawable/button_red"
        style="@style/button_login"
        android:visibility="invisible"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/btSaveUser"
        android:background="@drawable/button_default"
        style="@style/button_login"
        android:text="@string/save"/>
</LinearLayout>
</ScrollView>