<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/LinearLayoutDefault">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutDefault"
    android:layout_margin="@dimen/default_margin"
    tools:context="br.com.calderani.rafael.tetoedc.LoginActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etEmail"
            style="@style/controls_default"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPassword"
            style="@style/controls_default"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <Button
            android:id="@+id/btSignUp"
            android:background="@drawable/button_default"
            style="@style/button_login"
            android:layout_weight="0.5"
            android:text="@string/sign_up"/>

        <Button
            android:id="@+id/btSignIn"
            android:background="@drawable/button_green"
            style="@style/button_login"
            android:layout_weight="0.5"
            android:text="@string/sign_in"/>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutInternal">
        <ImageView
            android:id="@+id/ivSignInFacebook"
            style="@style/input_logo"
            android:layout_weight="0.33"
            android:src="@drawable/ic_facebook_signin"
            android:contentDescription="Facebook Sign In" />

        <ImageView
            android:id="@+id/ivSignInGoogle"
            style="@style/input_logo"
            android:layout_weight="0.33"
            android:src="@drawable/ic_google_signin"
            android:contentDescription="Google Sign In" />

        <ImageView
            android:id="@+id/ivSignInTwitter"
            style="@style/input_logo"
            android:layout_weight="0.34"
            android:src="@drawable/ic_twitter_signin"
            android:contentDescription="Twitter Sign In"/>

    </LinearLayout>
    <LinearLayout style="@style/LinearLayoutInternal">
        <CheckBox
            android:id="@+id/cbKeepConnected"
            style="@style/controls_default"
            android:textSize="@dimen/text_size_small"
            android:text="@string/remember_me"
            android:checked="true"
            android:layout_weight="0.62" />

        <TextView
            android:id="@+id/tvResetPassword"
            style="@style/controls_default"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:text="@string/password_reset"
            android:clickable="true"
            android:layout_weight="0.38" />
    </LinearLayout>
</LinearLayout>
</ScrollView>
