<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:padding="@dimen/default_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/splash"
        android:contentDescription="@string/user_image"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/tvAppName"
        style="@style/TextAppearance.AppCompat.Default"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/ivUserImage"
        android:paddingLeft="5dp"
        android:paddingBottom="25dp"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/tvNGOSite"
        style="@style/TextAppearance.AppCompat.Default"
        android:textSize="@dimen/text_size_xsmall"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/ivUserImage"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/tetoBrasilSite" />
</RelativeLayout>
